dark mode fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
     --popover-foreground: 0 0% 98%;
     --primary: 237, 94%, 32%;
     --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
+    --secondary: 237, 100%, 37%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
